    - Added per-planet global trade productivity modifiers. Can be tweaked or disabled in mod settings.
    - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
    - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
  Bugfixes:
    - Fixed /force-claim command not being able to claim liquid hexes.
    - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
    - Fixed crash when opening trade overview while an equipment grid is open.
    - Fixed that the completion of a quest before its revelation was not revealing it.
    - Fixed that the ammo in dungeon turrets was not infinite.
    - Fixed that interplanetary trades were sometimes missing on some planets.
  Changes:
    - JSON trades export now has a more consistent structure, where entries that were nonexistent are now entered as false.
    - Changed mod thumbnail from hexaprism coin to a hexagon.
    - Changed enemy force color to dark purple, giving dungeons a sicker look.
    - Buffed plague rocket acceleration and direct damage.
  Optimizations:
    - Improved dungeon generation speed.
  Modding:
    - Flagged mod Resource Spawner Overhaul as incompatible, as it disrupts this mod's initialization.
      That mod's effects can be achieved with this mod's handling of map generation settings.
---------------------------------------------------------------------------------------------------
Version: 1.0.18
Date: 16/7/25
  Bugfixes:
    - Hotfix for trade export notification being formatted incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.17
Date: 16/7/25
  Minor Features:
    - Added ability to export all trades as JSON text from trade overview.
  Bugfixes:
    - Fixed that hex core spawning was deleting entities (such as ores) incorrectly.