@@ -1,0 +1,6 @@
+
+local defender = data.raw["combat-robot"]["defender"]
+
+defender.attack_parameters.range = defender.attack_parameters.range * 1.2
+defender.max_health = defender.max_health * 1.5
+defender.range_from_player = 12
