@@ -1,0 +1,5 @@
+
+local distractor = data.raw["combat-robot"]["distractor"]
+
+distractor.attack_parameters.range = distractor.attack_parameters.range * 1.2
+distractor.max_health = distractor.max_health * 2.5
