@@ -2,6 +2,8 @@
 require "buff_discharge"
 require "buff_destroyer"
 require "buff_teslagun"
+require "buff_defender"
+require "buff_distractor"
 require "prototypes.init"
 
 -- Override title screen music.
